--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta property="og:site" content="" />	
 <meta property="og:title" content="Nayuta"/>	
 <meta property="og:description" content="Nayuta es un bot dedicado al contenido anime en general, diversión, moderación, memes y mucho más." />
-<meta property="og:image" content="static/images/nayutalogosite.png" />
+<meta property="og:image" content="https://cdn.nayutabot.com/media/nayutalogosite.png" />
 <meta property="og:url" content="https://nayutabot.com" />
 <meta property="og:type" content="article" />
 
@@ -46,7 +46,7 @@
 <link href="static/css/styles.css" rel="stylesheet">
 
 <link rel="alternate" hreflang="en" href="https://nayutabot.com/en">
-<link rel="icon" href="static/images/favicon.png">
+<link rel="icon" href="https://cdn.nayutabot.com/media/favicon.png">
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
     
@@ -102,12 +102,12 @@
   </a>
   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
     <a class="dropdown-item" href="">
-      <img src="https://raw.githubusercontent.com/twitter/twemoji/d94f4cf793e6d5ca592aa00f58a88f6a4229ad43/assets/svg/1f1ea-1f1f8.svg" alt="Español" width="16" height="12">
+      <img src="https://cdn.nayutabot.com/media/spain-flag.svg" alt="Español" width="16" height="12">
       <span class="item-text">ESPAÑOL</span>
     </a>
     <div class="dropdown-items-divide-hr"></div>
     <a class="dropdown-item" href="en/">
-      <img src="https://raw.githubusercontent.com/twitter/twemoji/d94f4cf793e6d5ca592aa00f58a88f6a4229ad43/assets/svg/1f1fa-1f1f8.svg" alt="English" width="16" height="12">
+      <img src="https://cdn.nayutabot.com/media/usa-flag.svg" alt="English" width="16" height="12">
       <span class="item-text">ENGLISH</span>
     </a>
   </div>
@@ -139,7 +139,7 @@
 <div class="row">
 <div class="col-lg-6">
 
-<img class="img-fluid" src="static/images/actions.gif" alt="alternative">
+<img class="img-fluid" src="https://cdn.nayutabot.com/media/actions.gif" alt="alternative">
 
 </div>
 <div class="col-lg-6">
@@ -168,7 +168,7 @@
 </div>
 <div class="col-lg-6">
 
-  <img class="img-fluid" src="static/images/wallpapers.png" alt="alternative">
+  <img class="img-fluid" src="https://cdn.nayutabot.com/media/wallpapers.png" alt="alternative">
 
 </div>
 </div>
@@ -181,7 +181,7 @@
 <div class="row">
 <div class="col-lg-6">
 
-<img class="img-fluid" src="static/images/emision.png" alt="alternative">
+<img class="img-fluid" src="https://cdn.nayutabot.com/media/emision.png" alt="alternative">
 
 </div>
 <div class="col-lg-6">
@@ -210,7 +210,7 @@
     </div>
     <div class="col-lg-6">
     
-      <img class="img-fluid" src="static/images/moderation.png" alt="alternative">
+      <img class="img-fluid" src="https://cdn.nayutabot.com/media/moderation.png" alt="alternative">
     </div>
     </div>
     </div>       
@@ -225,7 +225,7 @@
 <h2>¿INTERESADO EN NAYUTA?</h2>
 <div class="p-heading p-large">Si has llegado hasta aquí es porque Nayuta te está gustando mucho. Dale una oportunidad que no te decepcionará con sus increíbles características.</div>
 <center>
-  <img src="static/images/nayutakani.png" >
+  <img src="https://cdn.nayutabot.com/media/nayutakani.png" >
 </center>
 </div>
 </div> 
@@ -242,7 +242,7 @@
 <div class="row">
 <div class="col-md-4">
 <div class="footer-col">
-<h4><img src="static/images/footerimage.png" width="150" height="50" align="left"><br></h4>
+<h4><img src="https://cdn.nayutabot.com/media/footerimage.png" width="150" height="50" align="left"><br></h4>
   <p><br>Nayuta es un bot de entretenimiento diseñado para cuidar de ti y de tu servidor, con el objetivo de llevar la atmósfera cómoda y saludable directamente a tu chat.</p>
 <div class=""><a class="turquoise" href="privacidad/">Política de privacidad</a></div>
 </div>
