--- a/privacidad/index.html
+++ b/privacidad/index.html
@@ -41,7 +41,7 @@
 <link href="../static/css/styles.css" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 
-<link rel="icon" href="../static/images/favicon.png">
+<link rel="icon" href="https://cdn.nayutabot.com/media/favicon.png">
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
     
@@ -55,7 +55,7 @@
 </div>
     
 <nav class="navbar navbar-expand-md navbar-dark navbar-custom fixed-top">
-<a class="navbar-brand logo-image" href="../"><img src="../static/images/logo.png" alt="La base de datos está fuera de línea o se ha producido un error de carga."></a> 
+<a class="navbar-brand logo-image" href="../"><img src="https://cdn.nayutabot.com/media/logo.png" alt="La base de datos está fuera de línea o se ha producido un error de carga."></a> 
 
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-awesome fas fa-bars"></span>
@@ -100,12 +100,12 @@
 
 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="">
-      <img src="https://raw.githubusercontent.com/twitter/twemoji/d94f4cf793e6d5ca592aa00f58a88f6a4229ad43/assets/svg/1f1ea-1f1f8.svg" alt="Español" width="16" height="12">
+      <img src="https://cdn.nayutabot.com/media/spain-flag.svg" alt="Español" width="16" height="12">
       <span class="item-text">ESPAÑOL</span></a>
 
 <div class="dropdown-items-divide-hr"></div>
 <a class="dropdown-item" href="../en/privacity/">
-      <img src="https://raw.githubusercontent.com/twitter/twemoji/d94f4cf793e6d5ca592aa00f58a88f6a4229ad43/assets/svg/1f1fa-1f1f8.svg" alt="English" width="16" height="12">
+      <img src="https://cdn.nayutabot.com/media/usa-flag.svg" alt="English" width="16" height="12">
       <span class="item-text">ENGLISH</span></a>
 
 </div>
