--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
 <meta property="og:site" content="" />	
 <meta property="og:title" content="Nayutabot"/>	
 <meta property="og:description" content="Nayuta es un bot dedicado al contenido anime en general, diversión, moderación, memes y mucho más." />
-<meta property="og:image" content="../static/images/nayutalogosite.png" />
+<meta property="og:image" content="https://cdn.nayutabot.com/media/nayutalogosite.png" />
 <meta property="og:url" content="" />	
 <meta property="og:type" content="article" />
 
@@ -65,7 +65,7 @@
     <div class="text-container">
 
     <h2><center>Error 404 - ¡Oops! Parece que te has perdido en el cosmo</center></h2>
-    <center><img src="static/images/cry.gif" alt="centered image"/><br></center>
+    <center><img src="https://cdn.nayutabot.com/media/cry.gif" alt="centered image"/><br></center>
 <center><a href="https://nayutabot.com/" class="button">Volver a la Página de Inicio</a></center>
     
     
