--- a/en/privacity/index.html
+++ b/en/privacity/index.html
@@ -13,7 +13,7 @@
 <meta property="og:site" content="" />	
 <meta property="og:title" content="Nayuta"/>	
 <meta property="og:description" content="Nayuta is a bot dedicated to anime content in general, fun, moderation, memes and much more." />
-<meta property="og:image" content="../../static/images/nayutalogosite.png" />
+<meta property="og:image" content="https://cdn.nayutabot.com/media/nayutalogosite.png" />
 <meta property="og:url" content="" />	
 <meta property="og:type" content="article" />
 
@@ -45,7 +45,7 @@
 <link href="../../static/css/magnific-popup.css" rel="stylesheet">
 <link href="../../static/css/styles.css" rel="stylesheet">
 
-<link rel="icon" href="../../static/images/favicon.png">
+<link rel="icon" href="https://cdn.nayutabot.com/media/favicon.png">
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
     
@@ -58,7 +58,7 @@
 </div>
     
 <nav class="navbar navbar-expand-md navbar-dark navbar-custom fixed-top">
-  <a class="navbar-brand logo-image" href="../../en/"><img src="../../static/images/logo.png" alt="The database is offline or a loading error has occurred"></a> 
+  <a class="navbar-brand logo-image" href="../../en/"><img src="https://cdn.nayutabot.com/media/logo.png" alt="The database is offline or a loading error has occurred"></a> 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-awesome fas fa-bars"></span>
 <span class="navbar-toggler-awesome fas fa-times"></span>
@@ -101,12 +101,12 @@
   </a>
   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
     <a class="dropdown-item" href="../../privacidad">
-      <img src="https://raw.githubusercontent.com/twitter/twemoji/d94f4cf793e6d5ca592aa00f58a88f6a4229ad43/assets/svg/1f1ea-1f1f8.svg" alt="Español" width="16" height="12">
+      <img src="https://cdn.nayutabot.com/media/spain-flag.svg" alt="Español" width="16" height="12">
       <span class="item-text">ESPAÑOL</span>
     </a>
     <div class="dropdown-items-divide-hr"></div>
     <a class="dropdown-item" href="">
-      <img src="https://raw.githubusercontent.com/twitter/twemoji/d94f4cf793e6d5ca592aa00f58a88f6a4229ad43/assets/svg/1f1fa-1f1f8.svg" alt="English" width="16" height="12">
+      <img src="https://cdn.nayutabot.com/media/usa-flag.svg" alt="English" width="16" height="12">
       <span class="item-text">ENGLISH</span>
     </a>
   </div>
