--- a/equipo/index.html
+++ b/equipo/index.html
@@ -142,7 +142,7 @@
     </div>
     <div class="avatar__wrapper">
       <div class="avatar">
-        <img class="cat-ears" src="https://i.imgur.com/byUhB6I.png" alt="Orejas de gato">
+        <img class="angel" src="https://cdn.nayutabot.com/media/angel.png" alt="Decoración de angel">
     </div>
   </div>
     <div class="headerTop">
