--- a/en/team/index.html
+++ b/en/team/index.html
@@ -144,7 +144,7 @@
     </div>
     <div class="avatar__wrapper">
       <div class="avatar">
-        <img class="cat-ears" src="https://i.imgur.com/byUhB6I.png" alt="Orejas de gato">
+        <img class="angel" src="https://cdn.nayutabot.com/media/angel.png" alt="Angel">
     </div>
     </div>
     <div class="headerTop">
