--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="dns-prefetch" href="https://fonts.gstatic.com">
 <link rel="preload" href="static/css/styles.css" as="style">
-<link rel="preload" href="static/js/scripts.js" as="script">
+<link rel="preload" href="https://cdn.nayutabot.com/scripts/scripts.js" as="script">
 
 <title>Nayuta | Discord Bot</title>
     
