--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
     
 <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i" rel="stylesheet">
-<link href="static/css/bootstrap.css" rel="stylesheet">
-<link href="static/css/swiper.css" rel="stylesheet">
-<link href="static/css/fontawesome-all.css" rel="stylesheet">
-<link href="static/css/magnific-popup.css" rel="stylesheet">
-<link href="static/css/styles.css" rel="stylesheet">
+<link href="https://cdn.nayutabot.com/styles/main/bootstrap.css" rel="stylesheet">
+<link href="https://cdn.nayutabot.com/styles/main/swiper.css" rel="stylesheet">
+<link href="https://cdn.nayutabot.com/styles/main/fontawesome-all.css" rel="stylesheet">
+<link href="https://cdn.nayutabot.com/styles/main/magnific-popup.css" rel="stylesheet">
+<link href="https://cdn.nayutabot.com/styles/main/styles.css" rel="stylesheet">
 
 <link rel="alternate" hreflang="en" href="https://nayutabot.com/en">
 <link rel="icon" href="https://cdn.nayutabot.com/media/favicon.png">
