--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
 
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="dns-prefetch" href="https://fonts.gstatic.com">
-<link rel="preload" href="https://cdn.nayutabot.com/styles/main/styles.css" as="style">
-<link rel="preload" href="https://cdn.nayutabot.com/scripts/scripts.js" as="script">
+<link rel="preload" href="static/css/styles.css" as="style">
+<link rel="preload" href="static/js/scripts.js" as="script">
 
 <title>Nayuta | Discord Bot</title>
     
 <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i" rel="stylesheet">
-<link href="https://cdn.nayutabot.com/styles/main/bootstrap.css" rel="stylesheet">
-<link href="https://cdn.nayutabot.com/styles/main/swiper.css" rel="stylesheet">
-<link href="https://cdn.nayutabot.com/styles/main/fontawesome-all.css" rel="stylesheet">
-<link href="https://cdn.nayutabot.com/styles/main/magnific-popup.css" rel="stylesheet">
-<link href="https://cdn.nayutabot.com/styles/main/styles.css" rel="stylesheet">
+<link href="static/css/bootstrap.css" rel="stylesheet">
+<link href="static/css/swiper.css" rel="stylesheet">
+<link href="static/css/fontawesome-all.css" rel="stylesheet">
+<link href="static/css/magnific-popup.css" rel="stylesheet">
+<link href="static/css/styles.css" rel="stylesheet">
 
 <link rel="alternate" hreflang="en" href="https://nayutabot.com/en">
 <link rel="icon" href="https://cdn.nayutabot.com/media/favicon.png">
