--- a/en/team/index.html
+++ b/en/team/index.html
@@ -144,7 +144,7 @@
     </div>
     <div class="avatar__wrapper">
       <div class="avatar">
-        <img class="angel" src="https://cdn.nayutabot.com/media/angel.png" alt="Angel">
+        <img class="sombrero" src="https://cdn.nayutabot.com/media/sombrero.png" alt="Sombrero">
     </div>
     </div>
     <div class="headerTop">
