--- a/equipo/index.html
+++ b/equipo/index.html
@@ -142,7 +142,7 @@
     </div>
     <div class="avatar__wrapper">
       <div class="avatar">
-        <img class="sombrero" src="https://cdn.nayutabot.com/media/angel.png" alt="Decoración de angel">
+        <img class="sombrero" src="https://cdn.nayutabot.com/media/sombrero.png" alt="Sombrero de verano">
     </div>
   </div>
     <div class="headerTop">
